# AdventofCode

./: .gitignore  LICENSE  README.md  githubupdate.bat  index.js  requirements.txt
.github/workflows/: aoc.yml  badges.yml  tests.yml
2019/01/: index.js
2019/02/: index.js
2019/03/: index.js  index2.js  part2.js
2019/04/: index.js
2019/05/: index.js
2019/06/: index.js
2019/07/: index.js
2019/08/: index.js
2019/09/: index.js
2019/10/: index.js
2020/: launcher.py
2020/01/: main.py
2020/02/: main.py
2020/03/: main.py
2020/04/: main.py
2020/05/: main.py
2020/06/: main.py
2020/07/: main.py
2020/08/: main.py
2020/09/: main.py
2020/10/: main.py
2020/11/: main.py
2020/12/: main.py
2020/13/: main.py
2020/14/: main.py
2020/15/: main.py
2021/: launcher.py
2021/01/: 01_test.py  main.py
2021/02/: 02_test.py  main.py
2021/03/: 03_test.py  main.py
2021/04/: 04_test.py  main.py
2021/06/: 06_test.py  main.py
2021/07/: 07_test.py  main.py
2021/10/: 10_test.py  main.py
Challange_1/Part_1/: index.js  (+1 more)
rust2015/: .gitignore  Cargo.toml
rust2022/: .gitignore  Cargo.toml
rust2022/aoc-macro/src/: lib.rs
rust2022/src/: lib.rs  main.rs
rust2022/src/days/: d01.rs  d02.rs  d03.rs  d05.rs  d06.rs  d07.rs  d10.rs  d14.rs  d16.rs  d17.rs  d24.rs  mod.rs
rust2023/: .gitignore  Cargo.toml
rust2025/: .gitignore  Cargo.toml
rust2025/aoc-macro/src/: lib.rs
rust2025/src/: main.rs
rust2025/src/days/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d09.rs  d13.rs  d14.rs  d18.rs  d19.rs  d24.rs  d25.rs  mod.rs
(+47 files in other folders)
