[package]
name = "rust2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.34", features = ["suggestions", "color", "wrap_help"] }
colored = "2.0"
aoc-macro = {path="aoc-macro"}
reqwest = { version = "0.11", features=["cookies", "blocking"] }
mut_static="5.0"
lazy_static="1.4"
